# AudioLM

./: .gitignore  AudioLM_notebook_test.ipynb  README 2.md  README.md  __init__.py  encodec.ipynb  pyproject.toml  requirements.txt
.dvc/: config
audiolm/: __main__.py  first_function.py  real_time_audio.py
audiolm/css/: app.tcss
docs/: AudioLM.drawio  Untitled Diagram.drawio  audiolm.md  encodec.md  notes.md
models/: training.ipynb
notebooks/: AudioLM_notebook_test.ipynb  audiolm.ipynb  encodec.ipynb  encodec2.ipynb  first_notebook.ipynb  prove.ipynb  semantic_transformer.ipynb  tensorboard.ipynb  test.ipynb  test_encodec.ipynb
src/audiolm/: RelativeTransformer.py  __init__.py  __main__.py  absolute_transformer.py  app.py  config.py  costants.py  custom_encodec.py  data_preparation.py  encodec.py  model.py  models.py  relative_transformer.py  trainer.py  transformers.py  utils.py  w2v_hubert.py
src/audiolm/acoustic_modelling/: custom_encodec.py
src/audiolm/coarse_acoustic_modeling/: soundstream.py
src/audiolm/coarse_acoustic_modelling/: acoustic_transformer.py  custom_encodec.py
src/audiolm/semantic_acoustic_modeling/: W2VHuBERT_Quantizier.py  config.json  utils.py  w2vBert_Kmeans.py
src/audiolm/transformer/: AbsoluteTransformer.py  RelativeTransformer.py  coarse_transformer_trainer.py  trainer.py
src/css/: app.tcss
src/scripts/: dataset.py
src/tests/: tests_tokenizer_model.py
tests/: test_audiolm.py  test_trainer.py  test_transformers.py  tests_tokenizer_model.py
