[tool.poetry]
name = "audiolm"
version = "0.1.0"
description = "Implementation of AudioLM"
authors = [
    "Jose Manuel Del Valle Delgado <josedlv936@gmail.com>",
    "Valerio Belli <valeriobelli26@gmail.com>",
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
ipykernel = "^6.29.2"
textual = "^0.52.1"
textual-plotext = "^0.2.1"
sounddevice = "^0.4.6"
tensorboard = "^2.16.2"
requests = "^2.31.0"
tqdm = "^4.66.2"
transformers = "^4.40.1"
datasets = "^2.19.0"
soundfile = "^0.12.1"
fairseq = "^0.12.2"
iprogress = "^0.4"
torch = "2.2.1"
torchaudio = "2.2.1"
pydantic = "^2.7.1"
torchinfo = "^1.8.0"
ipywidgets = "^8.1.2"
gradio = "^4.31.4"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
black = "^24.2.0"
textual-dev = "^1.5.1"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# https://pylint.readthedocs.io/en/stable/user_guide/configuration/all-options.html
[tool.pylint]
disable = [
    "W0237", # arguments-renamed
]
