[tool.poetry]
name = "audiolm"
version = "0.1.0"
description = "Implementation of AudioLM"
authors = [
    "Jose Manuel Del Valle Delgado <josedlv936@gmail.com>",
    "Valerio Belli <valeriobelli26@gmail.com>",
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
ipykernel = "^6.29.2"
sounddevice = "^0.4.6"
tensorboard = "^2.16.2"
requests = "^2.31.0"
tqdm = "^4.66.2"
transformers = "^4.40.1"
datasets = "^2.19.0"
soundfile = "^0.12.1"
fairseq = "^0.12.2"
iprogress = "^0.4"
# Enabled only if you want to use cuda 
# torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.3.0%2Bcu121-cp39-cp39-win_amd64.whl" }
# torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.3.0%2Bcu121-cp39-cp39-win_amd64.whl" }
torch = "2.2.1"
torchaudio = "2.2.1"
pydantic = "^2.7.1"
torchinfo = "^1.8.0"
ipywidgets = "^8.1.2"
gradio = "^4.31.4"
joblib = "^1.4.2"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
black = "^24.2.0"
textual-dev = "^1.5.1"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# https://pylint.readthedocs.io/en/stable/user_guide/configuration/all-options.html
[tool.pylint]
disable = [
    "W0237", # arguments-renamed
    "C0301", # line-too long
    "R0913", # too many arguments
]
